Updated dissertation with all of Isaac's feedback

--- a/dissertation/bib.bib
+++ b/dissertation/bib.bib
@@ -356,7 +356,7 @@
 }
 
 @Misc{tulip-clustering-coeff-doc,
-    title = {{tulip module API - Tulip Python}},
+    title = {{tulip module API - Tulip Python 4.10.0 docs}},
     howpublished = "http://tulip.labri.fr/Documentation/current/tulip-python/html/tulipreference.html\#tulip.tlp.clusteringCoefficient",
     author={Tulip},
     note="Last accessed: 17th March 2017"
@@ -399,4 +399,109 @@
     howpublished = "https://jquery.com/",
     author={jQuery},
     note="Last accessed: 19th March 2017"
+}
+
+@Misc{jquery-ajax,
+    title = {{jQuery.ajax()}},
+    howpublished = "https://api.jquery.com/jquery.ajax/",
+    author={jQuery},
+    note="Last accessed: 19th March 2017"
+}
+
+@article{anderson2012subgroup,
+  title={The subgroup graph of a group},
+  author={Anderson, David F and Fasteen, Jodi and LaGrange, John D},
+  journal={Arabian Journal of Mathematics},
+  volume={1},
+  number={1},
+  pages={17--27},
+  year={2012},
+  publisher={Springer}
+}
+
+@book{scott2012group,
+  title={Group theory},
+  author={Scott, William Raymond},
+  year={2012},
+  publisher={Courier Corporation}
+}
+
+@article{baker1994approximation,
+  title={Approximation algorithms for NP-complete problems on planar graphs},
+  author={Baker, Brenda S},
+  journal={Journal of the ACM (JACM)},
+  volume={41},
+  number={1},
+  pages={153--180},
+  year={1994},
+  publisher={ACM}
+}
+
+@inproceedings{herhut2012parallel,
+  title={Parallel Programming for the Web.},
+  author={Herhut, Stephan and Hudson, Richard L and Shpeisman, Tatiana and Sreeram, Jaswanth},
+  booktitle={HotPar},
+  year={2012}
+}
+
+@inproceedings{gansner2011multilevel,
+  title={Multilevel agglomerative edge bundling for visualizing large graphs},
+  author={Gansner, Emden R and Hu, Yifan and North, Stephen and Scheidegger, Carlos},
+  booktitle={Pacific Visualization Symposium (PacificVis), 2011 IEEE},
+  pages={187--194},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{roberts1971characterization,
+  title={A characterization of clique graphs},
+  author={Roberts, Fred S and Spencer, Joel H},
+  journal={Journal of Combinatorial Theory, Series B},
+  volume={10},
+  number={2},
+  pages={102--108},
+  year={1971},
+  publisher={Elsevier}
+}
+
+@article{fruchterman1991graph,
+  title={Graph drawing by force-directed placement},
+  author={Fruchterman, Thomas MJ and Reingold, Edward M},
+  journal={Software: Practice and experience},
+  volume={21},
+  number={11},
+  pages={1129--1164},
+  year={1991},
+  publisher={Wiley Online Library}
+}
+
+@techreport{beckman1994theory,
+  title={Theory of spectral graph layout},
+  author={Beckman, Brian},
+  year={1994},
+  institution={Technical Report MSR-TR-94-04, Microsoft Research}
+}
+
+@book{didimo2013graph,
+  title={Graph Drawing: 20th International Symposium, GD 2012, Redmond, WA, USA, September 19-21, 2012, Revised Selected Papers},
+  author={Didimo, Walter and Patrignani, Maurizio},
+  volume={7704},
+  year={2013},
+  publisher={Springer}
+}
+
+@inproceedings{ellson2001graphviz,
+  title={Graphviz—open source graph drawing tools},
+  author={Ellson, John and Gansner, Emden and Koutsofios, Lefteris and North, Stephen C and Woodhull, Gordon},
+  booktitle={International Symposium on Graph Drawing},
+  pages={483--484},
+  year={2001},
+  organization={Springer}
+}
+
+@book{masse2011rest,
+  title={REST API Design Rulebook: Designing Consistent RESTful Web Service Interfaces},
+  author={Masse, Mark},
+  year={2011},
+  publisher={" O'Reilly Media, Inc."}
 }
