--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -49,6 +49,9 @@
 
 \setlength\parindent{0pt}
 
+\setlength{\tabcolsep}{0.5em}
+\renewcommand{\arraystretch}{1.2}
+
 \newcommand{\tmark}{\ding{51}}
 \newcommand{\cmark}{\ding{55}}
 
