--- a/dissertation/sections/10-appendices.tex
+++ b/dissertation/sections/10-appendices.tex
@@ -42,7 +42,7 @@ Won't have but would like:
 
 See Figure \ref{fig:techinfra_app} for first draft of the technical infrastructure.
 
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=17cm]{6/tech_infra}
     \caption{Draft of Technical Infrastructure}
