--- a/dissertation/sections/08-testing-eval.tex
+++ b/dissertation/sections/08-testing-eval.tex
@@ -16,7 +16,7 @@ To confirm that the conversion from a Tulip graph to a JSON object was successfu
 
 \subsubsection{Confirming that each bundling algorithms work}
 
-To test each algorithm initially three different networks were loaded into the system using Tulip's \texttt{tlp.loadGraph()}. One of these networks would be used to test Node Bundling based on cliques, since it was a very interconnected network. The other two networks would be used to test Node Pruning and Node Bundling based on number of edges, being far more sparsely connected networks. Each test consisted of checking the number of nodes upon loading in the network, applying the appropriate operation that was being tested for, and then confirming that the number of nodes and edges returned from the function was as expected.
+To test each algorithm initially three different networks were loaded into the system using the Tulip function \texttt{tlp.loadGraph()}. One of these networks would be used to test Node Bundling based on cliques, since it was a very interconnected network. The other two networks would be used to test Node Pruning and Node Bundling based on number of edges, being far more sparsely connected networks. Each test consisted of checking the number of nodes upon loading in the network, applying the appropriate operation that was being tested for, and then confirming that the number of nodes and edges returned from the function was as expected.
 
 \subsubsection{Successful page responses}
 
@@ -26,7 +26,7 @@ The unit tests, which confirmed that both the part of the back-end that returned
 
 Integration tests serve the purpose of testing that each component works predictably when combined with all other components it should work with \cite{basanieri2000practical}. For this project, they serve the purpose of confirming that the Tulip Web Wrapper worked as expected, and that it interacted with the rest of the back-end correctly.
 
-The integration tests for the Tulip Web Wrapper involved creating a network in the database during the set up phase of the test, and then loading in that network using different algorithms and ensuring the output at the end was correct. This entailed running the \texttt{loadGraph} API call and passing in appropriate parameters such as the network name, and whether node pruning or node bundling using number of edges was enabled. The response of that call (a JSON object) was then decoded and it was checked if the call had been successful, and if it had contained the correct number of nodes and edges, along with the expected number of nodes that had been pruned of bundled. This ensured that the logic within the view was correct, that the bundling code worked as anticipated, and that the conversion worked correctly.
+The integration tests for the Tulip Web Wrapper involved creating a network in the database during the set up phase of the test, and then loading in that network using different algorithms and ensuring the output at the end was correct. This entailed calling the \texttt{loadGraph} API endpoint using JavaScript AJAX \cite{jquery-ajax} and passing in appropriate parameters such as the network name, and whether node pruning or node bundling using number of edges was enabled. The response of that call (a JSON object) was then decoded and it was checked if the call had been successful, and if it had contained the correct number of nodes and edges, along with the expected number of nodes that had been pruned of bundled. This ensured that the logic within the view was correct, that the bundling code worked as anticipated, and that the conversion worked correctly.
 
 \section{User Evaluation}
 
@@ -38,11 +38,11 @@ TODO - make this two paragraphs
 
 \subsection{Aim}
 
-The goal of the performance evaluation was to thoroughly test the system that had been created. This would involve loading several different networks into the system, and then recording the performance of the system when different algorithms are used and comparing the results.
+The goal of the performance evaluation was to thoroughly test the system that had been created. This would involve loading several different networks into the system, and then recording the performance of the system when different algorithms are used and comparing the results, providing a quantative evaluation.
 
 \subsection{Methodology}
 
-As SAS had provided four different networks, these would be used evaluate the system. The networks had approximately thirty, two hundred, one thousand and three thousand nodes respectively, and each had a similar number of edges. Each of these networks would first be uploaded into the system and then rendered with the following parameters: no algorithm set, node pruning, node bundling based on number of edges and both node pruning then node bundling based on number of edges.
+As SAS had provided four different networks of varying sizes, these would be used evaluate the system. The networks had approximately thirty, two hundred, one thousand and three thousand nodes respectively, and each had approximately the same number of edges as nodes. Each of these networks would first be uploaded into the system and then rendered with the following parameters: no algorithm set, node pruning, node bundling based on number of edges and both node pruning then node bundling based on number of edges.
 
 The runs were conducted on the same machine, one by one, while no other application was running apart from the Django development server which hosted the site. Each run of the evaluation was done five times so a reliable average could be taken. For each run, the following information was collected:
 
@@ -81,7 +81,7 @@ Each percentage in the following sections is created by comparing the time or pa
 
 \subsubsection{30 Nodes}
 
-Node Pruning resulted in a 50\% decrease in total time to visualise, and 36\% decrease in packet size. Node Bundling based on the number of edges resulted in a 24\% decrease in time to generate and render, and 36\% decrease in packet size. Applying both Node Pruning and Node Bundling based on number of edges resulted in a 63\% decrease in amount of time to visualise and a 40\% decrease in packet size. Node Pruning is clearly more effective than Node Bundling, providing lower packet sizes and faster network loading times.
+For a network with approximately 30 nodes, Node Pruning resulted in a 50\% decrease in total time to visualise, and 36\% decrease in packet size. Node Bundling based on the number of edges resulted in a 24\% decrease in time to generate and render, and 36\% decrease in packet size. Applying both Node Pruning and Node Bundling based on number of edges resulted in a 63\% decrease in amount of time to visualise and a 40\% decrease in packet size. Node Pruning is clearly more effective than Node Bundling, providing lower packet sizes and faster network loading times.
 
 \begin{table}[H]
 \centering
@@ -91,13 +91,13 @@ Node Pruning resulted in a 50\% decrease in total time to visualise, and 36\% de
 Total Time (ms)     & 170.8 $\pm$ 15.3 & 85.8 $\pm$ 20.5  & 129.6 $\pm$ 19.3 & 63.2 $\pm$ 15.2 \\ \hline
 Packet Size (bytes) & 1300             & 827              & 1012             & 785             \\ \hline
 \end{tabular}
-\caption{Total Times to load a network of 30 nodes and size of packet transferred over the network}
+\caption{Total Times to load a network of 31 nodes and 26 edges, and the size of the packet transferred over the network}
 \label{table:30-nodes}
 \end{table}
 
 \subsubsection{200 Nodes}
 
-For 200 nodes, Node Pruning provides a 91\% decrease in total load time and a 49\% decrease in packet size. For Node Bundling based on number of edges, the decrease in load time was 9\% and the packet size decreased by 20\%. Applying Node Pruning followed by Node Bundling based on number of nodes resulted in a 98\% decrease in loading times and a 70\% decrease in packet size. Node Pruning is again more effective at lowering the amount of data that needs to be transferred and lowering the amount of time to manipulate and render the network.
+For approximately 200 nodes, Node Pruning provides a 91\% decrease in total load time and a 49\% decrease in packet size. For Node Bundling based on number of edges, the decrease in load time was 9\% and the packet size decreased by 20\%. Applying Node Pruning followed by Node Bundling based on number of nodes resulted in a 98\% decrease in loading times and a 70\% decrease in packet size. Node Pruning is again more effective at lowering the amount of data that needs to be transferred and lowering the amount of time to manipulate and render the network.
 
 \begin{table}[H]
 \centering
@@ -107,13 +107,13 @@ For 200 nodes, Node Pruning provides a 91\% decrease in total load time and a 49
 Total Time (ms)     & 7382.8 $\pm$ 2010.2 & 663.0 $\pm$ 187.0 & 6749.0 $\pm$ 1075.0 & 146.6 $\pm$ 14.5 \\ \hline
 Packet Size (bytes) & 7600                & 3900              & 6100                & 2300             \\ \hline
 \end{tabular}
-\caption{Total Times to load a network of 200 nodes and size of packet transferred over the network}
+\caption{Total Times to load a network of 199 nodes and 199 edges, and the size of the packet transferred over the network}
 \label{table:200-nodes}
 \end{table}
 
 \subsubsection{1000 Nodes}
 
-When the network with 1000 nodes was used, similar results to above were seen. There was an 84\% decrease in loading times and 51\% decrease in packet size for Node Pruning, and a 36\% decrease in loading times and a 29\% decrease in packet size. When applying both Node Pruning and then Node Bundling based on the number of edges, the decrease in loading times was 99.997\% and the packet size was reduced by 70\%. Again, Node Pruning was shown to be more effective than Node Bundling based on number of edges, but additionally there was a massive decrease in loading times when applying both algorithms. TODO - why so big.
+When the network with approximately 1000 nodes was used, similar results to above were seen. There was an 84\% decrease in loading times and 51\% decrease in packet size for Node Pruning, and a 36\% decrease in loading times and a 29\% decrease in packet size. When applying both Node Pruning and then Node Bundling based on the number of edges, the decrease in loading times was 99.997\% and the packet size was reduced by 70\%. Again, Node Pruning was shown to be more effective than Node Bundling based on number of edges, but additionally there was a massive decrease in loading times when applying both algorithms. It is hypothesised that the reason such an increase in performance was seen was due to the structure of the network lending itself well to being Node Pruned and then Node Bundled based on number of edges, and hence there was a massive reduction in nodes and edges to be rendered.
 
 \begin{table}[H]
 \centering
@@ -123,23 +123,24 @@ When the network with 1000 nodes was used, similar results to above were seen. T
 Total Time (ms)     & 59924.4 $\pm$ 8343.5 & 9417.8 $\pm$ 2223.1 & 38139.8 $\pm$ 9383.0 & 152.6 $\pm$ 30.5 \\ \hline
 Packet Size (bytes) & 41400                & 20300               & 29400                & 12400            \\ \hline
 \end{tabular}
-\caption{Total Times to load a network of 1000 nodes and size of packet transferred over the network}
+\caption{Total Times to load a network of 1089 nodes and 1087 edges, and the size of the packet transferred over the network}
 \label{table:1000-nodes}
 \end{table}
 
 \subsubsection{3000 Nodes}
 
-For the largest network, with 3000 nodes, the following results were obtained. Loading times decreased by 81\% and packet size decreased by 44\% for Node Pruning. For Node Bundling based on number of edges, a decrease of 48\% was seen for loading times and a 27\% decrease was seen for packet size. When applying Node Pruning followed by Node Bundling based on number of edges the decrease in total time was 94\%, and the decrease of packet size was 72\%. Similar to above, a performance increase was most notable for Node Pruning. 
+For the largest network, with approximately 3000 nodes, the following results were obtained. Loading times decreased by 81\% and packet size decreased by 44\% for Node Pruning. For Node Bundling based on number of edges, a decrease of 48\% was seen for loading times and a 27\% decrease was seen for packet size. When applying Node Pruning followed by Node Bundling based on number of edges the decrease in total time was 94\%, and the decrease of packet size was 72\%. Similar to above, a performance increase was most notable for Node Pruning. 
 
 \begin{table}[H]
 \centering
+\setlength{\tabcolsep}{0.4em}
 \begin{tabular}{|l|l|l|l|l|}
 \hline
                     & \textbf{None}          & \textbf{Pruning}     & \textbf{Edge-based Bundling}         & \textbf{Both}        \\ \hline
 Total Time (ms)     & 252849.2 $\pm$ 32862.0 & 48956.8 $\pm$ 3937.0 & 131606.6 $\pm$ 6031.3 & 14532.8 $\pm$ 3341.0 \\ \hline
 Packet Size (bytes) & 114000                 & 63500                & 83500                 & 42900                \\ \hline
 \end{tabular}
-\caption{Total Times to load a network of 3000 nodes and size of packet transferred over the network}
+\caption{Total Times to load a network of 2849 nodes and 2835 edges, and the size of the packet transferred over the network}
 \label{table:3000-nodes}
 \end{table}
 
@@ -161,9 +162,9 @@ Figure \ref{fig:packetSize} shows a steady decrease in packet size from no algor
     \label{fig:packetSize}
 \end{figure}
 
-The above results clearly show the benefits of applying different algorithms to reduce the amount of data that is to be visualised. This is in regards to both the amount of data that needs to be transferred, and how long it takes to load a visualisation - from a user clicking `Load' to the network rendering. 
+The above results show the benefits of applying different algorithms to reduce the amount of data that is to be visualised. This is in regards to both the amount of data that needs to be transferred, and how long it takes to load a visualisation - from a user clicking `Load' to the network rendering. 
 
-For 30 nodes, the amount of time saved when node bundling based on edges was 41ms, and for 3000 nodes the time saved was 120759ms (just over 2 minutes). The amount of time spent processing the networks on the server in order to get the stated time savings was 0.36ms for 30 nodes and 94ms for 3000 nodes. For node pruning, the time spent pruning on the server for 30 nodes was 0.38ms and resulted in an 84.8ms speed up, and for 3000 nodes the time spent pruning on the server was 169ms and the time saved in total was 203010ms (just over 3 and a third minutes). Finally, when applying both algorithms, there was 0.42ms spent processing the information on the server for 30 nodes, with a total time saving of 107ms, and 192ms applying the algorithms on 3000 nodes, with a time saving of 237177ms (just under 4 minutes). These results clearly show the benefit of applying the bundling algorithms.
+For 30 nodes, the amount of time saved when node bundling based on edges was 41ms, and for 3000 nodes the time saved was 120759ms (just over 2 minutes). The amount of time spent processing the networks on the server in order to get the stated time savings was 0.36ms for 30 nodes and 94ms for 3000 nodes. For node pruning, the time spent pruning on the server for 30 nodes was 0.38ms and resulted in an 84.8ms speed up, and for 3000 nodes the time spent pruning on the server was 169ms and the time saved in total was 203010ms (just over 3 minutes and 20 seconds). Finally, when applying both algorithms, there was 0.42ms spent processing the information on the server for 30 nodes, with a total time saving of 107ms, and 192ms applying the algorithms on 3000 nodes, with a time saving of 237177ms (just under 4 minutes). These results clearly show the benefit of applying the bundling algorithms.
 
 It is worth noting that, despite the fact that performance increased greatly when applying the above algorithms, this is solely due to the fact that less nodes were shown. There are attempts to reduce the amount of data lost, both in removing the programmatically decided least critical nodes to the visualisation, and showing where nodes have been bundled and how many nodes have been bundled.
 
